...
    final dailyLimitValue = (widget.user?.data?.dailyLimit ?? 0) / 100;
    final currency = widget.user?.data?.fiatCurrencyCode;
    final dailyLimit =
        NumberFormat.simpleCurrency(decimalDigits: 2, name: currency)
            .format(dailyLimitValue);
    return Scaffold(
      key: const ValueKey('payment-screen'),
      appBar: AppBar(
        leading: Center(
          child: InkWell(
            onTap: () => Navigator.pop(context),
            borderRadius: BorderRadius.circular(90),
            child: CircleAvatar(
...
                        child: Divider(),
                      ),
                    ],
                  ),
                  const SizedBox(height: 35),
                  TextButton(
                      key: const ValueKey('add-payment-method'),
                      style: TextButton.styleFrom(
                          padding: const EdgeInsets.all(10),
                          shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(15),
                          ),
                          backgroundColor: Theme.of(context)
...
